fixed h1 issue on iphone6, 7, 8

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,10 +387,33 @@ main {
   font-size: 1.55vw;
   padding-left: 5px;
   }
+}
 
-  
+@media screen and (max-width: 480px) {
+  .subtitle {
+    font-size: 20px;
+    margin:   10px;
+  }
 
-  
+  .hero .picture, .picture img {
+    max-width: 200px;
+    margin-left: auto;
+  }
+
+  header h1 {
+    font-size: 30px;
+    margin-left: 35px;
+    padding-right:10px;
+  }
+
+  .span-background {
+    padding-left: 0px;
+    background-color: transparent;
+  }
+
+  header nav ul li a {
+    padding-left: 40px;
+  }
 }
 
 
